--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
-    <title>Your page title</title>
+    <title>Zero-G Odyssey</title>
     <link rel="icon" href="./img/favicon.svg" type="image/svg+xml" />
   </head>
 
   <body>
     <header><div id="navbarWrapper"></div></header>
-    <main></main>
+    <main>
+      <div id="menu"></div>
+    </main>
     <footer></footer>
   </body>
 </html>
